--- a/views/index.html
+++ b/views/index.html
@@ -1,25 +1,29 @@
 
-<head>
-  <style media="screen">
-    body {
-      background-color: lightblue;
-    }
+ <!DOCTYPE html>
+ <html>
+ <head>
+   <meta charset="utf-8">
+           <title>Search Engine</title>
+           <link rel="stylesheet"  type="text/css" href="css/index.css">
+   </head>
 
-    h1 {
-      color: white;
-      text-align: center;
-    }
-  </style>
-  <header>
-    <h1>Homepage</h1> <a href="/login.html">login</a>
-  </header>
-</head>
-<body>
 
-    <div class= align= "center" style="text-align: "center";vertical-align:"middle" >
-    <input type="text" name="Search box" value="Search here">
-    <button type="button" name="Go" >Go</button>
+
+ <body>
+   <div class="flex-center position-ref full-height">
+           <div class="top-right links">
+                   <a href="login.html">Login</a>
+                   <a href="register.html">Register</a>
+           </div>
+
+ <h1 >SEARCH ENGINE</h1>
+
+ <div class="form-box"  class="header">
+		  <input type ="text" class="search" placeholder = "Search a book">
+      <br>
+      <img class ="search-btn" src="images/search.jpg" alt="">
+		  <!-- <button class ="search-btn" type="button"> </button> -->
       </div>
 
-
-</body>
+ </body>
+ </html>
