--- a/views/login.html
+++ b/views/login.html
@@ -1,5 +1,12 @@
 <head>
+<center>
   <h1>Login</h1>
+  </center>
+     <link rel="stylesheet"  type="text/css" href="css/login.css">
+
+
+
+
   <script type="text/javascript">
 
 
@@ -11,38 +18,50 @@ console.log(password);
 var userObj={
   username:username,
   password:password
+
 };
 var xhttp = new XMLHttpRequest();
   xhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
       //document.getElementById("demo").innerHTML = this.responseText;
       console.log(this.responseText);
+      var res=JSON.parse(this.responseText);
+      localStorage.setItem("token",res.token);
+       window.location.href = 'home.html';
     }
+    else
+    if (this.readyState == 2 && this.status == 404)
+     {alert("Invalid credentials");}
+
   };
   xhttp.open("POST", "/api/authenticate", true);
   xhttp.setRequestHeader("Content-type", "application/json");
   xhttp.send(JSON.stringify(userObj));
     }
-  </script> -->
+  </script>
 </head>
 
 <body>
+  <center>
+
+
 <div class="">
   <form class="" >
-    <label for=""> Email address</label>
-    <input type="text" id="email">
+    <label class="fas fa-key" for=""> Email address</label>
+    <input class="fas fa-key"type="text" id="email">
     <br>
-    <label for="">password</label>
-    <input type="password" id ="pass">
+    <label class="fas fa-key"for="">password</label>
+    <input class="fas fa-key" type="password" id ="pass">
     <br>
-    <button type="button" name="Submit" value="Submit" onclick="store()" >Login</button>
+    <button type="button"  class="btn btn-success " name="Submit" value="Submit" onclick="store()" >Login</button>
   </form>
 <a href ="/forgotpass.html"> Forgot Password</a>
 </div>
 
-<div class="">
+<div >
 
 <a  href ="/register.html" > Register</a>
 
 </div>
+</center>
 </body>
