--- a/views/SERP.ejs
+++ b/views/SERP.ejs
@@ -19,24 +19,48 @@
             <input type="text" placeholder="search a book" id="title" class="form-control" />
             <button type="button" class="btn btn-primary" onclick="searchTitles()" name="button">Go</button>
         </div>
-<strong>
-
-        <div class="titles">
-
-        </div>
-        <div class="count">
-
         </div>
 
-        <p>Matching Results</p>
-        <div class="pagination">
-          <div class="results">
+<div class="col-lg-12 doc-middle-content">
+  <strong>
+  <div class="titles">
 
-          </div>
+  </div>
+  <div class="count">
+
+  </div>
+
+  <p>Matching Results</p>
+  <div class="pagination">
+
+
+  <div class = "results1"> </div>
+    <div class="mt-3"> <a data-toggle="collapse" href="#collapseExample" role="button"  aria-expanded="false" aria-controls="collapseExample"> Page 1 <i class="fa fa-angle-down"></i> </a>
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+
+            <div class="col-md-4 results1"> </div>
+
         </div>
+      </div>
+    </div>
+
+    <!-- <div  class="mt-3">
+<ul >
+<a data-toggle="collapse"  role="button" aria-expanded="false" aria-controls="collapseExample">page 1 <i class="fa fa-angle-down"></i> </a>
+  <li class="results1"></li></ul>
+  <li class="results2">page 2</li>
+  <li class="results3">page 3</li>
+
+
+    </div> -->
+
+  </div>
+</div>
+
 
 </strong>
-</div>
+
 
 <script type="text/javascript">
 
@@ -57,7 +81,9 @@
           console.log(this.responseText);
           var response=JSON.parse(this.responseText);
           var hits=response.hits.hits;
-          var results=document.getElementsByClassName('results')[0];
+          var results1=document.getElementsByClassName('results1')[0];
+          var results2=document.getElementsByClassName('results2')[0];
+          var results3=document.getElementsByClassName('results3')[0];
 
           var titles = document.getElementsByClassName('titles')[0];
           titles.innerHTML='<p> searching for: '+userObj.title+'</p>';
@@ -66,15 +92,43 @@
           var counts=document.getElementsByClassName('count')[0]
           counts.setAttribute('class','item');
           counts.innerHTML='<p>'+'Total matches:'+count+'</p>';
-          for (var i in hits){
-            var div=document.createElement('div');
 
+          for (var i in hits ){
+
+            var div=document.createElement('div');
+            console.log(userObj.title);
 
             div.setAttribute('class','item');
             div.innerHTML='<p>'+k+') '+'<a href=/api/users/getbook/'+hits[i]._id+'>'+hits[i]._source.title+'\n'+'</a></p>';
-            k+=1;
-            results.appendChild(div);
+
+
+            if(k<11){
+            results1.appendChild(div);
           }
+
+          if(k>11 && k<21){
+            results2.appendChild(div);
+          }
+       if(k>21 &&k<31){
+      results3.appendChild(div);
+    }
+    if(k>31 &&k<41){
+   results3.appendChild(div);
+ }
+ if(k>41 &&k<51){
+results3.appendChild(div);
+}
+if(k>51 &&k<61){
+results3.appendChild(div);
+}
+if(k>61 &&k<71){
+results3.appendChild(div);
+}
+      k+=1;
+       }
+
+          var data = pagination(dataset,1,10);
+          console.log('Data: ',data)
 
         }
   };
@@ -84,11 +138,26 @@
     xhttp.send();
 
 }
+
+
 function searchTitles(){
-  localStorage.setItem('title',document.getElementById("title").value);
+  var Title = document.getElementById("title").value;
+var titlestrip = Title.replace(/(<([^>]+)>)/gi, "");
+localStorage.setItem('title',titlestrip);
    window.location.href='/api/users/serp';
  }
 
+
+function pagination(queryset,page, rows){
+  var trimstart = (page -1)* rows
+  var trimend = trimstart + rows
+  var trimmed = queryset.slice(trimstart,trimend)
+  var pages = Math.ceil(queryset.length /rows)
+  return{
+    'queryset': trimmed,
+    'pages' : pages
+  }
+}
 </script>
 
 <%- include('partials/footer') %>
