--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,15 @@
       <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
       <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+ <script src="https://www.google.com/recaptcha/api.js"></script>
+ <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.24/datatables.min.css"/>
 
+<script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.24/datatables.min.js"></script>
+ <script type="text/javascript">
+ function onSubmit(token) {
+    document.getElementById("login_form").submit();
+  }
+ </script>
     <style type="text/css">
         body {
             padding-top: 100px;
