--- a/views/register.ejs
+++ b/views/register.ejs
@@ -22,6 +22,11 @@
       <input type="password" name="password" id="password" class="form-control" required />
     </div>
     <div class="form-group">
+<div class="col-sm-offset-2 col-sm-10">
+  <div class="g-recaptcha" data-sitekey="6Lc6MK0aAAAAAJ6WK1j-tT3kRLwke9-Su60INdJp" data-callback='onSubmit' data-action='submit'>
+</div>
+  </div>
+    <div class="form-group">
       <button type="submit" class="btn btn-primary">Register</button>
       <a href="/login" class="btn btn-link">Login</a>
     </div>
