--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -15,7 +15,7 @@
             <strong>Abstract : </strong><input type="text" class="form-control" id="Abstract" name="" value=""><br><br>
 
 <button type="button" class="btn btn-info" onclick="create()" name="button">Submit</button>
-<button type="button" class="btn btn-info" href="window.history.back()" name="button">Back</button>
+<button type="button" class="btn btn-info" onclick="window.history.back()" name="button">back</button>
 
         </div>
     </div>
